ciliumpodtest.yaml
apiVersion: v1
kind: Pod
metadata:
  name: testpod
  labels:
    org: UK
    class: mediabot
spec:
  containers:
  - name: mediabot
    image: docker.io/tgraf/netperf
